--- a/new_site.html
+++ b/new_site.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            MY NEW SITE
-        </title>
-        <link rel="stylesheet" href="style1.css">
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Modak&display=swap" rel="stylesheet">
-        
-    </head>
-    <body>
-        <header>
-            <div>
-                <nav>
-                    <div>
-                        <h1 class = "logo">ANIME Channel</h1>
-                    </div>
-                    <div class = "menu">
-                        <a href="#">Home</a>
-                        <a href="#">Contact</a>
-                        <a href="#">About</a>
-                        <a href="#">Telegram</a>
-                    </div>
-                </nav>
 
-                <main>
-                    <section>
-                        <h3>@Welcome to Anime Channel@</h3>
-                        <h1>WATCH <span class = "Change_Content"></span></h1>
-                        <p>All Anime in HD Quality</p>
-                        <a href="#" class="btn1">Learn More</a>
-                        <a href="#" class= "btn2"> Signup here</a>    
-                    </section>
-                </main>
-            </div>
-        </header>
-        
-    </body>
+<head>
+    <title>MY NEW SITE</title>
+    <link rel="stylesheet" href="style1.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Modak&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+    <header>
+        <div>
+            <nav>
+                <div>
+                    <h1 class="logo">ANIME Channel</h1>
+                </div>
+                <div class="menu">
+                    <a href="#">Home</a>
+                    <a href="#">Contact</a>
+                    <a href="#">About</a>
+                    <a href="#">Telegram</a>
+                </div>
+            </nav>
+
+            <main>
+                <section>
+                    <h3>@Welcome to Anime Channel@</h3>
+                    <h1>WATCH <span class="Change_Content"></span></h1>
+                    <p>All Anime in HD Quality</p>
+                    <a href="#" class="btn1">Learn More</a>
+                    <a href="#" class="btn2"> Signup here</a>
+                </section>
+            </main>
+        </div>
+    </header>
+</body>
+
 </html>
